tdf#166125 Revert "tdf#158532 sw: fix toolbar buttons remain disabled ...

... after pasting an image"

This reverts commit a586ce188086ff27b08b8a4de4672c07ddf8ed7c (tdf#158532
sw: fix toolbar buttons remain disabled after pasting an image,
2024-01-03). The original problem is not reproducible anymore and it
causes tdf#166125, so best to revert it.

Change-Id: I7bee45da2835106915d4f9f7e6410725d6c854d5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184054
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins