sw/source/uibase/uiview/view.cxx
@@ -302,13 +302,12 @@ void SwView::SelectShell()
     // Determine if a different fly frame was selected.
     bool bUpdateFly = false;
     const SwFrameFormat* pCurFlyFormat = nullptr;
-    if (m_pWrtShell->IsSelFrameMode())
+    if (m_nSelectionType & SelectionType::Ole || m_nSelectionType & SelectionType::Graphic)
     {
         pCurFlyFormat = m_pWrtShell->GetFlyFrameFormat();
     }
-    if (pCurFlyFormat && m_pLastFlyFormat && pCurFlyFormat != m_pLastFlyFormat)
+    if (pCurFlyFormat && pCurFlyFormat != m_pLastFlyFormat)
     {
-        // Only do an explicit update when switching between flys.
         bUpdateFly = true;
     }
     m_pLastFlyFormat = pCurFlyFormat;
